force-app/main/default/objects/ContentVersion/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c </fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consumer</relationshipLabel>
    <relationshipName>ConsumerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>