force-app/main/default/objects/ContentVersion/fields/ConsumerNumber__c.field-meta.xml
<CustomField>
    <fullName>ConsumerNumber__c</fullName>
    <formula>Consumer__r.CustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Number</label>
    <type>Text</type>
</CustomField>