force-app/main/default/objects/ContentVersion/fields/Document_Download_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Download_Icon_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND(&quot;/services&quot;, $Api.Partner_Server_URL_260))&amp; &quot;file-asset/downloadbuttonpng&quot;</formula>
    <label>Document Download Icon URL</label>
    <type>Text</type>
</CustomField>