force-app/main/default/objects/ContentVersion/fields/DocumentIdentifier__c.field-meta.xml
<CustomField>
    <fullName>DocumentIdentifier__c</fullName>
    <label>Document Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>