force-app/main/default/objects/ContentVersion/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Confirmation</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Dispatch Note</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>