force-app/main/default/objects/ContentVersion/fields/InspectionCompany__c.field-meta.xml
<CustomField>
    <fullName>InspectionCompany__c</fullName>
    <label>Inspection Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>