force-app/main/default/objects/ContentVersion/fields/InvoiceReceiver__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Receiver</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Receiver</relationshipLabel>
    <relationshipName>InvoiceAccount</relationshipName>
    <type>Lookup</type>
</CustomField>