force-app/main/default/objects/ContentVersion/fields/InvoiceReceiverNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceiverNumber__c</fullName>
    <formula>InvoiceReceiver__r.CustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Receiver Number</label>
    <type>Text</type>
</CustomField>