force-app/main/default/objects/ContentVersion/fields/MillOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>MillOrderNumber__c</fullName>
    <label>Mill Order Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>