force-app/main/default/objects/ContentVersion/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <label>Project ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>