force-app/main/default/objects/ContentVersion/fields/PublicationDate__c.field-meta.xml
<CustomField>
    <fullName>PublicationDate__c</fullName>
    <label>Publication Date</label>
    <type>Date</type>
</CustomField>