force-app/main/default/objects/ContentVersion/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName> 
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchaser</relationshipLabel>
    <relationshipName>PurchaserAccount</relationshipName>
    <type>Lookup</type>
</CustomField>