force-app/main/default/objects/ContentVersion/fields/PurchaserNumber__c.field-meta.xml
<CustomField>
    <fullName>PurchaserNumber__c</fullName>
    <formula>Purchaser__r.CustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchaser Number</label>
    <type>Text</type>
</CustomField>