force-app/main/default/objects/ContentVersion/fields/PurchaserReference__c.field-meta.xml
<CustomField>
    <fullName>PurchaserReference__c</fullName>
    <label>Purchaser Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>