force-app/main/default/objects/ContentVersion/fields/ReceiverReference__c.field-meta.xml
<CustomField>
    <fullName>ReceiverReference__c</fullName>
    <label>Receiver Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>