force-app/main/default/objects/ContentVersion/fields/RecencyDate__c.field-meta.xml
<CustomField>
    <fullName>RecencyDate__c</fullName>
    <label>Recency Date</label>
    <type>Date</type>
</CustomField>