force-app/main/default/objects/ContentVersion/fields/Regulator__c.field-meta.xml
<CustomField>
    <fullName>Regulator__c </fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regulator</relationshipLabel>
    <relationshipName>RegulatorAccount</relationshipName>
    <type>Lookup</type>
</CustomField>