force-app/main/default/objects/ContentVersion/fields/RegulatorNumber__c.field-meta.xml
<CustomField>
    <fullName>RegulatorNumber__c</fullName>
    <formula>Regulator__r.CustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regulator Number</label>
    <type>Text</type>
</CustomField>